refactor to use data model

--- a/shell-definition.yaml
+++ b/shell-definition.yaml
@@ -1,4 +1,4 @@
-description: 'ByteBlower chassis shell'
+description: 'TOSCA based ByteBlower chassis shell'
 
 imports:
 - cloudshell_standard: cloudshell_traffic_generator_chassis_standard_1_0_3.yaml
@@ -6,7 +6,7 @@ metadata:
   template_author: Quali
   template_icon: shell-icon.png
   template_name: ByteBlower Chassis Shell 2G
-  template_version: 2.0.1
+  template_version: 2.1.0
 node_types:
   vendor.ByteBlower Chassis Shell 2G:
     artifacts:
@@ -18,9 +18,6 @@ node_types:
         type: tosca.artifacts.File
     capabilities:
       auto_discovery_capability:
-        properties:
-          Controller Address:
-            type: string
         type: cloudshell.capabilities.AutoDiscovery
     derived_from: cloudshell.nodes.TrafficGeneratorChassis
 tosca_definitions_version: tosca_simple_yaml_1_0
