--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,4 +3,4 @@ cloudshell-orch-core>=3.3.0.0,<3.4.0.0
 cloudshell-shell-core>=5.0.3,<6.0.0
 cloudshell-traffic>=3.2.3,<3.3
 
-pybyteblower==2.11.6
+byteblower==2.14.2
